--- a/src/MainWindow.xaml
+++ b/src/MainWindow.xaml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<Window
+<core:DesktopWindow
     x:Class="HttpCrawler.MainWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:core="using:HttpCrawler.Core">
 
-    <Grid>
+    <Grid x:Name="RootGrid">
         
     </Grid>
-</Window>
+</core:DesktopWindow>
