--- a/src/MainWindow.xaml
+++ b/src/MainWindow.xaml
@@ -3,9 +3,29 @@
     x:Class="HttpCrawler.MainWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:ui="using:CommunityToolkit.WinUI.UI"
     xmlns:core="using:HttpCrawler.Core">
 
     <Grid x:Name="RootGrid">
-        
+        <Grid.RowDefinitions>
+            <RowDefinition Height="48"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+
+        <StackPanel x:Name="TitleBar" Grid.Row="0" Orientation="Horizontal" VerticalAlignment="Center">
+            <TextBlock Margin="24,0,0,0" Text="網路工具"/>
+        </StackPanel>
+
+        <NavigationView
+            x:Name="Navi" Grid.Row="1"
+            IsBackButtonVisible="Collapsed"
+            OpenPaneLength="200">
+
+            <NavigationView.MenuItems>
+                <NavigationViewItem Content="網路請求" Tag="HttpRequest"  Icon="{ui:FontIcon Glyph=&#xE8F3;}"/>
+            </NavigationView.MenuItems>
+
+            <Frame x:Name="ContentFrame"/>
+        </NavigationView>
     </Grid>
 </core:DesktopWindow>
