--- a/src/Pages/SettingsPage.xaml
+++ b/src/Pages/SettingsPage.xaml
@@ -3,9 +3,32 @@
     x:Class="HttpCrawler.Pages.SettingsPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:ui="using:CommunityToolkit.WinUI"
+    xmlns:ctrl="using:CommunityToolkit.WinUI.Controls"
     NavigationCacheMode="Required">
 
-    <Grid>
+    <StackPanel x:Name="RootPanel" Padding="24">
+        <StackPanel.Resources>
+            <ResourceDictionary>
+                <Style TargetType="ctrl:SettingsCard">
+                    <Setter Property="Margin" Value="12, 12, 12, 0"/>
+                </Style>
+            </ResourceDictionary>
+        </StackPanel.Resources>
+        
+        <TextBlock Text="設定" FontSize="36" Margin="0, 0, 0, 12"/>
 
-    </Grid>
+        <ctrl:SettingsCard
+            Header="顏色主題"
+            Description="更改應用程式的主題"
+            HeaderIcon="{ui:FontIcon Glyph=&#xE790;}">
+
+            <ComboBox x:Name="SC0_ThemeComboBox" SelectedIndex="0">
+                <ComboBoxItem Content="跟隨系統"/>
+                <ComboBoxItem Content="淺色"/>
+                <ComboBoxItem Content="深色"/> 
+            </ComboBox>
+        </ctrl:SettingsCard>
+
+    </StackPanel>
 </Page>
