change: 项目重命名

--- a/src/App.xaml
+++ b/src/App.xaml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Application
-    x:Class="HttpCrawler.App"
+    x:Class="WebTool.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:HttpCrawler">
+    xmlns:local="using:WebTool">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
