--- a/src/Pages/HttpRequest/HttpRequestPage.xaml
+++ b/src/Pages/HttpRequest/HttpRequestPage.xaml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Page
-    x:Class="HttpCrawler.Pages.HttpRequestPage"
+    x:Class="WebTool.Pages.HttpRequestPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:ctrl="using:CommunityToolkit.WinUI.Controls"
