--- a/src/Pages/Settings/SettingsPage.xaml
+++ b/src/Pages/Settings/SettingsPage.xaml
@@ -5,6 +5,7 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:ctrl="using:CommunityToolkit.WinUI.Controls"
     xmlns:ui="using:CommunityToolkit.WinUI"
+    xmlns:local="using:WebTool.Controls"
     NavigationCacheMode="Required">
 
     <StackPanel x:Name="RootPanel" Padding="24">
@@ -13,9 +14,13 @@
                 <Style TargetType="ctrl:SettingsCard">
                     <Setter Property="Margin" Value="12, 12, 12, 0"/>
                 </Style>
+                <Style TargetType="Expander">
+                    <Setter Property="Margin" Value="12, 12, 12, 0"/>
+                    <Setter Property="HorizontalAlignment" Value="Stretch"/>
+                </Style>
             </ResourceDictionary>
         </StackPanel.Resources>
-        
+
         <TextBlock Text="設定" FontSize="36" Margin="0, 0, 0, 12"/>
 
         <ctrl:SettingsCard
@@ -23,24 +28,33 @@
             Description="更改應用程式的主題色彩"
             HeaderIcon="{ui:FontIcon Glyph=&#xE790;}">
 
-            <ComboBox x:Name="SC0_ThemeColorComboBox" SelectedIndex="0">
+            <ComboBox x:Name="ThemeColorComboBox" SelectedIndex="0">
                 <ComboBoxItem Content="跟隨系統"/>
                 <ComboBoxItem Content="淺色"/>
-                <ComboBoxItem Content="深色"/> 
+                <ComboBoxItem Content="深色"/>
             </ComboBox>
         </ctrl:SettingsCard>
 
         <ctrl:SettingsCard
             Header="背景材質"
             Description="更改應用程式的背景材質"
-            HeaderIcon="{ui:FontIcon Glyph=&#xE790;}">
+            HeaderIcon="{ui:FontIcon Glyph=&#xE7F7;}">
 
-            <ComboBox x:Name="SC1_ThemeBackdropComboBox" SelectedIndex="0">
+            <ComboBox x:Name="ThemeBackdropComboBox" SelectedIndex="0">
                 <ComboBoxItem Content="雲母"/>
                 <ComboBoxItem Content="雲母變種"/>
                 <ComboBoxItem Content="壓克力"/>
             </ComboBox>
         </ctrl:SettingsCard>
 
+        <Expander>
+            <Expander.Header>
+                <local:HeaderedContentControl
+                    Header="配置文件" Description="更改應用程式使用的設定檔"
+                    Icon="{ui:FontIcon Glyph=&#xE74C;}"/>
+                
+            </Expander.Header>
+            
+        </Expander>
     </StackPanel>
 </Page>
