--- a/src/Controls/HeaderedContentControl.xaml
+++ b/src/Controls/HeaderedContentControl.xaml
@@ -25,11 +25,11 @@
                           Margin="2, 0, 20, 0"  Grid.RowSpan="2"/>
         
         <TextBlock x:Name="HeaderLabel" Grid.Row="0" Grid.Column="1"
-                   Text="{x:Bind Header}" FontSize="14"
+                   Text="{x:Bind Header}" FontSize="14" Visibility="Collapsed"
                    Foreground="{ThemeResource TextFillColorPrimaryBrush}"/>
         
         <TextBlock x:Name="DescriptionLabel" Grid.Row="1" Grid.Column="1"
-                   Text="{x:Bind Description}" FontSize="12"
+                   Text="{x:Bind Description}" FontSize="12" Visibility="Collapsed"
                    Foreground="{ThemeResource TextFillColorSecondaryBrush}"/>
     </Grid>
 </UserControl>
