--- a/src/Pages/AutomaticOperations/AutomaticOperationsPage.xaml
+++ b/src/Pages/AutomaticOperations/AutomaticOperationsPage.xaml
@@ -84,12 +84,31 @@
             </ctrl:GridSplitter.RenderTransform>
         </ctrl:GridSplitter>
         -->
-        
-        <StackPanel Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2" Orientation="Horizontal" BorderThickness="0, 1, 0, 0"
-                    Background="{ThemeResource AcrylicBackgroundFillColorDefaultBrush}"
-                    BorderBrush="{ThemeResource SurfaceStrokeColorDefaultBrush}">
-            <FontIcon Margin="8, 0, 8, 0" FontSize="16" Glyph="&#xE8B0;" VerticalAlignment="Center"/>
-            <TextBlock x:Name="CursorPositionTextBlock" Text="0, 0" VerticalAlignment="Center"/>
-        </StackPanel>
+
+        <Grid Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2" BorderThickness="0, 1, 0, 0"
+              Background="{ThemeResource AcrylicBackgroundFillColorDefaultBrush}"
+              BorderBrush="{ThemeResource SurfaceStrokeColorDefaultBrush}">
+
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+            </Grid.ColumnDefinitions>
+
+            <StackPanel Grid.Column="0" Orientation="Horizontal">
+                <FontIcon Margin="8, 0, 8, 0" FontSize="16" Glyph="&#xE8B0;" VerticalAlignment="Center"/>
+                <TextBlock x:Name="CursorPositionTextBlock" Text="0, 0" VerticalAlignment="Center"/>
+            </StackPanel>
+
+            <StackPanel x:Name="ProgressPanel"
+                        Grid.Column="1" Margin="12, 0" Visibility="Collapsed"
+                        Orientation="Horizontal" HorizontalAlignment="Right">
+
+                <FontIcon FontSize="16" Glyph="&#xE930;" VerticalAlignment="Center"/>
+                <TextBlock x:Name="ProgressCompletedLabel" Margin="8, 0, 24, 0" Text="0" VerticalAlignment="Center"/>
+                <FontIcon FontSize="16" Glyph="&#xEBD3;" VerticalAlignment="Center"/>
+                <TextBlock x:Name="ProgressDetailLabel" Margin="8, 0" VerticalAlignment="Center"/>
+                <ProgressBar x:Name="ProgressDetailBar" Width="200"/>
+            </StackPanel>
+        </Grid>
     </Grid>
 </Page>
