fix: 文字消息过长时无法自动换行

--- a/src/Pages/AutomaticOperations/AutomaticOperationsPage.xaml
+++ b/src/Pages/AutomaticOperations/AutomaticOperationsPage.xaml
@@ -103,6 +103,10 @@
             </StackPanel>
         </Grid>
 
-        <TeachingTip x:Name="WebMsgTip"/>
+        <TeachingTip x:Name="WebMsgTip">
+            <TeachingTip.Content>
+                <TextBlock Text="" TextWrapping="Wrap"/>
+            </TeachingTip.Content>
+        </TeachingTip>
     </Grid>
 </Page>
